--- a/BrasilGeo.Infra/BrasilGeo.Infra.csproj
+++ b/BrasilGeo.Infra/BrasilGeo.Infra.csproj
@@ -10,4 +10,11 @@
     <ProjectReference Include="..\BrasilGeo.Aplications\BrasilGeo.Aplications.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Context\" />
+    <Folder Include="Configurations\" />
+    <Folder Include="IoC\" />
+    <Folder Include="Repositories\" />
+  </ItemGroup>
+
 </Project>
