--- a/BrasilGeo.Aplications/BrasilGeo.Aplications.csproj
+++ b/BrasilGeo.Aplications/BrasilGeo.Aplications.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net7.0</TargetFramework>
@@ -8,6 +8,12 @@
 
   <ItemGroup>
     <ProjectReference Include="..\BrasilGeo.Domain\BrasilGeo.Domain.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Dtos\" />
+    <Folder Include="ManualMappers\" />
+    <Folder Include="Services\" />
   </ItemGroup>
 
 </Project>
