Arqutectando a Solução part3

--- a/BrasilGeo.Api/BrasilGeo.Api.csproj
+++ b/BrasilGeo.Api/BrasilGeo.Api.csproj
@@ -15,4 +15,8 @@
     <ProjectReference Include="..\BrasilGeo.Infra\BrasilGeo.Infra.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Controllers\" />
+  </ItemGroup>
+
 </Project>
