--- a/BrasilGeo.Aplications/BrasilGeo.Aplications.csproj
+++ b/BrasilGeo.Aplications/BrasilGeo.Aplications.csproj
@@ -1,4 +1,4 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net7.0</TargetFramework>
@@ -13,7 +13,7 @@
   <ItemGroup>
     <Folder Include="Dtos\" />
     <Folder Include="ManualMappers\" />
-    <Folder Include="Services\" />
+    <Folder Include="Services\Interfaces\" />
   </ItemGroup>
 
 </Project>
