--- a/BrasilGeo.Aplications/BrasilGeo.Aplications.csproj
+++ b/BrasilGeo.Aplications/BrasilGeo.Aplications.csproj
@@ -11,9 +11,12 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Dtos\" />
-    <Folder Include="ManualMappers\" />
-    <Folder Include="Services\Interfaces\" />
+    <Folder Include="Queries\" />
+    <Folder Include="Services\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Flunt" Version="2.0.5" />
   </ItemGroup>
 
 </Project>
