--- a/BrasilGeo.Aplications/BrasilGeo.Aplications.csproj
+++ b/BrasilGeo.Aplications/BrasilGeo.Aplications.csproj
@@ -16,6 +16,7 @@
 
   <ItemGroup>
     <PackageReference Include="Flunt" Version="2.0.5" />
+    <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="7.0.12" />
   </ItemGroup>
 
 </Project>
